--- a/ghost_starter/app/src/main/res/layout/activity_ghost.xml
+++ b/ghost_starter/app/src/main/res/layout/activity_ghost.xml
@@ -42,5 +42,23 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
+    <Button
+        android:id="@+id/challenge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/gameStatus"
+        android:layout_below="@+id/gameStatus"
+        android:layout_marginTop="65dp"
+        android:onClick="challenge"
+        android:text="challenge" />
+
+    <Button
+        android:id="@+id/new_round"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Round"
+        android:layout_centerVertical="true"
+        android:layout_alignStart="@+id/challenge" />
+
 
 </RelativeLayout>
