--- a/ghost_starter/app/src/main/res/layout/activity_ghost.xml
+++ b/ghost_starter/app/src/main/res/layout/activity_ghost.xml
@@ -56,9 +56,10 @@
         android:id="@+id/new_round"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Round"
+        android:layout_alignStart="@+id/challenge"
         android:layout_centerVertical="true"
-        android:layout_alignStart="@+id/challenge" />
+        android:onClick="onStart"
+        android:text="New Round" />
 
 
 </RelativeLayout>
